--- a/_pages/about.html
+++ b/_pages/about.html
@@ -45,7 +45,10 @@ redirect_from:
             Hi! I’m Zhongyu Yang, a final year undergraduate student at Lanzhou University, majoring in Mathematics (the Basic Theory Class). Currently, I am working as a Remote Intern at KAUST <a href="https://vision-cair.kaust.edu.sa/">Vision-CAIR</a>.
           </p>
           <p style="font-size: 16px;">
-            In my past research, I am most interested in <b>2D/3D AIGC & Multimodal understanding, generation, and interaction</b>. In the short term, I hope to make a controllable and editable generative model to better understand multimodal input, not just text and visual prompts. My long-term research goal is to develop intelligent machines that can actively perceive, analyze, and interpret human states, behaviors, and potential motivations in dynamic scenes.
+             My research interests include <b>2D/3D AIGC</b>, <b>Multimodal understanding, generation, and interaction</b>, and <b>Energy Economics</b>. You may refer to my personal <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/01yzzyu/yzzyu.github.io/master/assets/Resume.pdf">CV</a> or <a href="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/01yzzyu/yzzyu.github.io/master/assets/Resume_CN.pdf">CV_CN</a> for more information.
+          </p>
+          <p style="font-size: 16px;">
+             In my past research, I am most interested in <b>2D/3D AIGC</b>. In the short term, I hope to make a controllable and editable generative model to better understand multimodal input, not just prompts and visual encoders. My long-term research goal is to develop intelligent machines that can actively perceive, analyze, and interpret human states, behaviors, and potential motivations in dynamic scenes.
           </p>
           <p style="font-size: 16px;">
             Outside of research, I’m a big fan of the Los Angeles Lakers. My GOATs are Lionel Messi⚽ and LeBron James🏀 in their respective fields.
