--- a/_pages/about.html
+++ b/_pages/about.html
@@ -143,6 +143,27 @@ redirect_from:
           </div>
         </div>
 
+        <!-- Sensetime Internship -->
+        <div style="padding:20px;width:100%;vertical-align:middle">
+          <div style="display:flex;align-items:center;">
+            <div style="width:25%;">
+              <img src="/yzzyu.github.io/_pages/images/sensetime.png" alt="sensetime_logo" width="150" height="150" style="border-style: none">
+            </div>
+            <div style="width:75%;">
+              <p style="font-size: 16px; margin: 0;">
+                <b>SenseTime</b> &emsp; 02/25 – Present
+              </p>
+              <p style="font-size: 14px; margin: 0;">
+                Intern in Synaesthesia Computing Algorithm Research Group
+              </p>
+              <p style="font-size: 14px; margin: 0;">
+                Engaged in the search for understanding the latest multimodal knowledge & Research on streaming multimodal large model systems, and completed conference and journal papers.
+              </p>
+              <br>
+            </div>
+          </div>
+        </div>
+
         <!-- CUHKSZ Internship -->
         <div style="padding:20px;width:100%;vertical-align:middle">
           <div style="display:flex;align-items:center;">
