--- a/_pages/about.html
+++ b/_pages/about.html
@@ -154,7 +154,7 @@ redirect_from:
                 <b>SenseTime</b> &emsp; 02/25 – Present
               </p>
               <p style="font-size: 14px; margin: 0;">
-                Intern in Synaesthesia Computing Algorithm Research Group
+                Intern in General Perceptual Computing Research Group
               </p>
               <p style="font-size: 14px; margin: 0;">
                 Engaged in the search for understanding the latest multimodal knowledge & Research on streaming multimodal large model systems, and completed conference and journal papers.
