--- a/_pages/about.html
+++ b/_pages/about.html
@@ -69,10 +69,13 @@ redirect_from:
           <br>
           <br>
           <p style="font-size: 16px;">
+            <b>2025.03:</b> We present <a href="https://anonymous.4open.science/r/WikiAutoGen-C3C4/README.md">WikiAutoGen</a> to introduce a novel system for automated multimodal Wikipedia-style article generation.
+          </p>
+          <p style="font-size: 16px;">
             <b>2024.12:</b> Work as a Remote Research Intern with <a href="https://junchen14.github.io/">Jun Chen</a> and <a href="https://www.mohamed-elhoseiny.com/">Mohamed Elhoseiny</a>, King Abdullah University of Science and Technology (KAUST), focus on developing and optimizing web-scale Retrieval-Augmented Generation systems tailored for understanding up-to-date vision knowledge.
           </p>
           <p style="font-size: 16px;">
-            <b>2024.08:</b> We present <a href="https://01yzzyu.github.io/rechar.github.io/">ReChar</a> to create novel artworks that seamlessly incorporate user-defined elements and stylistic preferences into Chinese characters.
+            <b>2024.11:</b> We present <a href="https://01yzzyu.github.io/rechar.github.io/">ReChar</a> to create novel artworks that seamlessly incorporate user-defined elements and stylistic preferences into Chinese characters.
           </p>
           <p style="font-size: 16px;">
             <b>2024.05:</b> Our paper <a href="https://doi.org/10.1016/j.frl.2024.105669">Green Effect of Energy Transition Policy: A quasi-natural Experiment Based on New Energy Demonstration Cities</a> has been accepted to TOP Journals Finance Research Letters! Collaborative work with Zhichao Yu.
