--- a/_pages/about.html
+++ b/_pages/about.html
@@ -69,7 +69,7 @@ redirect_from:
           <br>
           <br>
           <p style="font-size: 16px;">
-            <b>2025.03:</b> We present <a href="https://anonymous.4open.science/r/WikiAutoGen-C3C4/README.md">WikiAutoGen</a> to introduce a novel system for automated multimodal Wikipedia-style article generation.
+            <b>2025.03:</b> We present <a href="https://01yzzyu.github.io/wikiautogen.github.io/">WikiAutoGen</a> to introduce a novel system for automated multimodal Wikipedia-style article generation.
           </p>
           <p style="font-size: 16px;">
             <b>2024.12:</b> Work as a Remote Research Intern with <a href="https://junchen14.github.io/">Jun Chen</a> and <a href="https://www.mohamed-elhoseiny.com/">Mohamed Elhoseiny</a>, King Abdullah University of Science and Technology (KAUST), focus on developing and optimizing web-scale Retrieval-Augmented Generation systems tailored for understanding up-to-date vision knowledge.
