--- a/_pages/about.html
+++ b/_pages/about.html
@@ -69,6 +69,9 @@ redirect_from:
           <br>
           <br>
           <p style="font-size: 16px;">
+              WikiAutoGen is featured as <a href="https://x.com/_akhaliq/status/1904900714519761315?s=46"> Hugging Face Daily Papers </a> and reposted by <a href="https://x.com/_akhaliq?t=Xbpfc0mTpJQfRsiC_ugQrw&s=09"> AK </a> .        
+            </p>
+          <p style="font-size: 16px;">
             <b>2025.03:</b> We present <a href="https://wikiautogen.github.io">WikiAutoGen</a> to introduce a novel system for automated multimodal Wikipedia-style article generation.
           </p>
           <p style="font-size: 16px;">
@@ -209,27 +212,6 @@ redirect_from:
               </p>
               <p style="font-size: 14px; margin: 0;">
                 Advised by <a href="https://yuanjames.github.io/">Yingfang Yuan</a>.
-              </p>
-              <br>
-            </div>
-          </div>
-        </div>
-
-        <!-- Xi’an Jiyun Technology Co., Ltd -->
-        <div style="padding:20px;width:100%;vertical-align:middle">
-          <div style="display:flex;align-items:center;">
-            <div style="width:25%;">
-              <img src="/yzzyu.github.io/_pages/images/jiyun_tech.png" alt="jiyun_tech_logo" width="150" height="150" style="border-style: none">
-            </div>
-            <div style="width:75%;">
-              <p style="font-size: 16px; margin: 0;">
-                <b>Xi’an Jiyun Technology Co., Ltd</b> &emsp; 01/24 – Present
-              </p>
-              <p style="font-size: 14px; margin: 0;">
-                Co-founder
-              </p>
-              <p style="font-size: 14px; margin: 0;">
-                Co-founded a technology company focused on innovative solutions. Research on computer science implements the latest research results into products and complete conference and journal papers.
               </p>
               <br>
             </div>
