--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -135,6 +135,36 @@ author_profile: true
 
         <h2>Computer Vision</h2>
         <div class="publication-item">
+            <img src="/yzzyu.github.io/_pages/images/wikiautogen_framework.png" alt="ReChar">
+            <div class="publication-content">
+                <a href="https://wikiautogen.github.io/">
+                    <div class="papertitle">WikiAutoGen: Towards Multi-Modal Wikipedia-Style Article Generation</div>
+                </a>
+                <div class="metadata">
+                    <em>
+                        <span class="journal-name" style="color: red;">Hugging Face Daily Papers</span>
+                    </em>
+                </div>
+                <div class="authors">
+                    <strong style="color: #0F52BA;">Zhongyu Yang</strong>, &nbsp;
+                    Jun Chen, &nbsp;
+                    Dannong Xu, &nbsp;
+                    Junjie Fei, &nbsp;
+                    Xiaoqian Shen, &nbsp;
+                    Liangbing Zhao, &nbsp;
+                    Chun-Mei Feng, &nbsp;
+                    Mohamed Elhoseiny
+                </div>
+                <div class="abstract">
+                Knowledge discovery and collection are intelligence-intensive tasks that traditionally require significant human effort to ensure high-quality outputs. Recent research has explored multi-agent frameworks for automating Wikipedia-style article generation by retrieving and synthesizing information from the internet. However, these methods primarily focus on text-only generation, overlooking the importance of multimodal content in enhancing informativeness and engagement. In this work, we introduce WikiAutoGen, a novel system for automated multimodal Wikipedia-style article generation. Unlike prior approaches, WikiAutoGen retrieves and integrates relevant images alongside text, enriching both the depth and visual appeal of generated content. To further improve factual accuracy and comprehensiveness, we propose a multi-perspective self-reflection mechanism, which critically assesses retrieved content from diverse viewpoints to enhance reliability, breadth, and coherence, etc. Additionally, we introduce WikiSeek, a benchmark comprising Wikipedia articles with topics paired with both textual and image-based representations, designed to evaluate multimodal knowledge generation on more challenging topics. Experimental results show that WikiAutoGen outperforms previous methods by 8%-29% on our WikiSeek benchmark, producing more accurate, coherent, and visually enriched Wikipedia-style articles.
+                </div>
+                <div class="metadata">
+                    <a href="https://wikiautogen.github.io/">Project Page</a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="publication-item">
             <img src="/yzzyu.github.io/_pages/images/rechar_framework.png" alt="ReChar">
             <div class="publication-content">
                 <a href="https://01yzzyu.github.io/rechar.github.io/">
