--- a/_pages/about.html
+++ b/_pages/about.html
@@ -66,13 +66,8 @@ redirect_from:
       <div style="width:100%;margin-right:auto;margin-left:auto;">
         <div style="padding:20px;width:100%;vertical-align:middle">
           <heading style="font-size: 26px;"><i>News</i></heading>
-          <br>
-          <br>
           <p style="font-size: 16px;">
-              WikiAutoGen is featured as <a href="https://x.com/_akhaliq/status/1904900714519761315?s=46"> Hugging Face Daily Papers </a> and reposted by <a href="https://x.com/_akhaliq?t=Xbpfc0mTpJQfRsiC_ugQrw&s=09"> AK </a> .        
-            </p>
-          <p style="font-size: 16px;">
-            <b>2025.03:</b> We present <a href="https://wikiautogen.github.io">WikiAutoGen</a> to introduce a novel system for automated multimodal Wikipedia-style article generation.
+            <b>2025.03:</b> We present <a href="https://wikiautogen.github.io">WikiAutoGen</a> to introduce a novel system for automated multimodal Wikipedia-style article generation.  WikiAutoGen is featured as <font color="#FF0000"><a href="https://x.com/_akhaliq/status/1904900714519761315?s=46"> Hugging Face Daily Papers, the best research papers curated by the community</font>, </a> and reposted by <a href="https://x.com/_akhaliq?t=Xbpfc0mTpJQfRsiC_ugQrw&s=09"> AK </a> .       
           </p>
           <p style="font-size: 16px;">
             <b>2024.12:</b> Work as a Remote Research Intern with <a href="https://junchen14.github.io/">Jun Chen</a> and <a href="https://www.mohamed-elhoseiny.com/">Mohamed Elhoseiny</a>, King Abdullah University of Science and Technology (KAUST), focus on developing and optimizing web-scale Retrieval-Augmented Generation systems tailored for understanding up-to-date vision knowledge.
